Fix NavBar z-index Issues

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -187,7 +187,7 @@ a, .btn-link{
   top:0;
   height: $window-height;
   transition: $main-transition;
-  z-index: 10;
+  z-index: 100;
   & #nav-header {
     height: $header-height;
     padding: $sideNavHeader-padding;
